Mon Jun 15 02:26:34 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP#connect): use connect_nonblock and
	  io/wait to eliminate timeout use. fix GH-899

Sat Jun 13 07:21:18 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (thread_start_func_2): don't interrupt when last thread
	  exit unless main thread is already exited. Otherwise main thread
	  could be wrongly interrupted when it uses rb_thread_call_without_gvl().
	  Patch by Takehiro Kubo. [Bug #11237][ruby-dev:49044][GH-898]

	* test/-ext-/gvl/test_last_thread.rb: new test for the above fix.

	* ext/-test-/gvl/call_without_gvl/call_without_gvl.c: new ext for
	  the above test.
	* ext/-test-/gvl/call_without_gvl/extconf.rb: ditto.

Mon Jun 15 00:14:33 2015  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/lib/pathname.rb (descend): Blockless form supported.
	  (ascend): Ditto.
	  [ruby-core:68820] [Feature #11052] Patch by Piotr Szotkowski.

Sun Jun 14 20:09:25 2015  Tanaka Akira  <akr@fsij.org>

	* time.c (time_getlocaltime): [DOC] Add examples of valid utc_offset
	  formats.
	  [ruby-core:68306] [Misc #10905] Patch by Charles Korn.

Sun Jun 14 18:49:56 2015  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (parse_numeric_port): Detect
	  port overflow.
	  (numeric_getaddrinfo): Use parse_numeric_port.
	  numeric_getaddrinfo fails if port is too big now.
	  This makes rb_getaddrinfo invokes the real getaddrinfo()
	  on such condition.
	  This change is related to [ruby-core:69355] [Bug #11179].

Sun Jun 14 17:26:03 2015  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_chunk_while): New method Enumerable#chunk_while.
	  [ruby-core:67738] [Feature #10769] proposed by Tsuyoshi Sawada.

Sun Jun 14 17:20:40 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_load_ok): try opening file without gvl not to
	  lock entire process.  [Bug #11060]

Sun Jun 14 10:43:50 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
