@@ -1,3 +1,11 @@
+Mon Jun 15 14:33:02 2015  Akinori MUSHA  <knu@iDaemons.org>
+
+	* lib/set.rb: Make Set#each and SortedSet#each generate a sized
+	  enumerator. [GH-931] by kachick (Kenichi Kamiya)
+
+	* test/test_set.rb: Import tests from Set into SortedSet. [GH-931]
+	  by kachick (Kenichi Kamiya)
+
 Mon Jun 15 02:26:34 2015  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/net/http.rb (Net::HTTP#connect): use connect_nonblock and
